force-app/main/default/objects/Opportunity/fields/Budget_Range__c.field-meta.xml
<CustomField>
    <fullName>Budget_Range__c</fullName>
    <label>Budget Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5-15 Lakhs</fullName>
            </value>
            <value>
                <fullName>15-35 Lakhs</fullName>
            </value>
            <value>
                <fullName>35-60 Lakhs</fullName>
            </value>
            <value>
                <fullName>&gt;60 Lakhs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>