force-app/main/default/objects/Opportunity/fields/checkpath__c.field-meta.xml
<CustomField>
    <fullName>checkpath__c</fullName>
    <label>checkpath</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>