force-app/main/default/objects/Opportunity/fields/Client_accepted_the_quote__c.field-meta.xml
<CustomField>
    <fullName>Client_accepted_the_quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client accepted the quote</label>
    <type>Checkbox</type>
</CustomField>