force-app/main/default/objects/Opportunity/fields/Clients_Duration__c.field-meta.xml
<CustomField>
    <fullName>Clients_Duration__c</fullName>
    <label>Client&apos;s Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - 3 Months</fullName>
            </value>
            <value>
                <fullName>3 - 6 Months</fullName>
            </value>
            <value>
                <fullName>6 - 9 Months</fullName>
            </value>
            <value>
                <fullName>9 - 12 Months</fullName>
            </value>
            <value>
                <fullName>&gt; 12 Months</fullName>
            </value>
            <value>
                <fullName>10Months</fullName>
                <isActive>false</isActive>
                <label>10Months</label>
            </value>
            <value>
                <fullName>11Months</fullName>
                <isActive>false</isActive>
                <label>11Months</label>
            </value>
            <value>
                <fullName>12Months</fullName>
                <isActive>false</isActive>
                <label>12Months</label>
            </value>
            <value>
                <fullName>1Months</fullName>
                <isActive>false</isActive>
                <label>1Months</label>
            </value>
            <value>
                <fullName>2Months</fullName>
                <isActive>false</isActive>
                <label>2Months</label>
            </value>
            <value>
                <fullName>3Months</fullName>
                <isActive>false</isActive>
                <label>3Months</label>
            </value>
            <value>
                <fullName>4Months</fullName>
                <isActive>false</isActive>
                <label>4Months</label>
            </value>
            <value>
                <fullName>5Months</fullName>
                <isActive>false</isActive>
                <label>5Months</label>
            </value>
            <value>
                <fullName>6Months</fullName>
                <isActive>false</isActive>
                <label>6Months</label>
            </value>
            <value>
                <fullName>7Months</fullName>
                <isActive>false</isActive>
                <label>7Months</label>
            </value>
            <value>
                <fullName>8Months</fullName>
                <isActive>false</isActive>
                <label>8Months</label>
            </value>
            <value>
                <fullName>9Months</fullName>
                <isActive>false</isActive>
                <label>9Months</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>