force-app/main/default/objects/Opportunity/fields/Companys_time_frame__c.field-meta.xml
<CustomField>
    <fullName>Companys_time_frame__c</fullName>
    <label>Companys time frame</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1Months</fullName>
            </value>
            <value>
                <fullName>2Months</fullName>
            </value>
            <value>
                <fullName>3Months</fullName>
            </value>
            <value>
                <fullName>4Months</fullName>
            </value>
            <value>
                <fullName>5Months</fullName>
            </value>
            <value>
                <fullName>6Months</fullName>
            </value>
            <value>
                <fullName>7Months</fullName>
            </value>
            <value>
                <fullName>8Months</fullName>
            </value>
            <value>
                <fullName>9Months</fullName>
            </value>
            <value>
                <fullName>10Months</fullName>
            </value>
            <value>
                <fullName>11Months</fullName>
            </value>
            <value>
                <fullName>12Months</fullName>
            </value>
            <value>
                <fullName>12+Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>