force-app/main/default/objects/Opportunity/fields/Design_Cost_per_hour__c.field-meta.xml
<CustomField>
    <fullName>Design_Cost_per_hour__c</fullName>
    <label>Design Cost per hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>