force-app/main/default/objects/Opportunity/fields/Design_Estimated_hours__c.field-meta.xml
<CustomField>
    <fullName>Design_Estimated_hours__c</fullName>
    <label>Design Estimated hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>