force-app/main/default/objects/Opportunity/fields/Development_Cost_per_hour__c.field-meta.xml
<CustomField>
    <fullName>Development_Cost_per_hour__c</fullName>
    <label>Development Cost per hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>