force-app/main/default/objects/Opportunity/fields/Estimated_Hours_For_Implementation__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Hours_For_Implementation__c</fullName>
    <label>Estimated Hours For Implementation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>