force-app/main/default/objects/Opportunity/fields/Implementation_Cost_per_hour__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Cost_per_hour__c</fullName>
    <label>Implementation Cost per hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>