force-app/main/default/objects/Opportunity/fields/Manageable_with_existing_employee__c.field-meta.xml
<CustomField>
    <fullName>Manageable_with_existing_employee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manageable with existing employee</label>
    <type>Checkbox</type>
</CustomField>