force-app/main/default/objects/Opportunity/fields/No_of_Designer__c.field-meta.xml
<CustomField>
    <fullName>No_of_Designer__c</fullName>
    <label>No of Designer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>