force-app/main/default/objects/Opportunity/fields/No_of_Managers__c.field-meta.xml
<CustomField>
    <fullName>No_of_Managers__c</fullName>
    <label>No of Managers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>