force-app/main/default/objects/Opportunity/fields/No_of_resources__c.field-meta.xml
<CustomField>
    <fullName>No_of_resources__c</fullName>
    <formula>No_of_Designer__c + No_of_Developer__c + No_of_Tester__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of resources</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>