force-app/main/default/objects/Opportunity/fields/No_of_resources_for_Implementation__c.field-meta.xml
<CustomField>
    <fullName>No_of_resources_for_Implementation__c</fullName>
    <label>No of resources for Implementation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>