force-app/main/default/objects/Opportunity/fields/No_of_Tester__c.field-meta.xml
<CustomField>
    <fullName>No_of_Tester__c</fullName>
    <label>No of Tester</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>