force-app/main/default/objects/Opportunity/fields/OM_Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>OM_Estimated_Hours__c</fullName>
    <label>Estimated Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>