force-app/main/default/objects/Opportunity/fields/Op_Cost_per_hour__c.field-meta.xml
<CustomField>
    <fullName>Op_Cost_per_hour__c</fullName>
    <label>Op Cost per hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>