force-app/main/default/objects/Opportunity/fields/Operation_No_Of_Resources__c.field-meta.xml
<CustomField>
    <fullName>Operation_No_Of_Resources__c</fullName>
    <label>Operation No Of Resources</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>