force-app/main/default/objects/Opportunity/fields/Planning_Cost_per_hour__c.field-meta.xml
<CustomField>
    <fullName>Planning_Cost_per_hour__c</fullName>
    <label>Planning Cost per hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>