force-app/main/default/objects/Opportunity/fields/Project_Domain__c.field-meta.xml
<CustomField>
    <fullName>Project_Domain__c</fullName>
    <label>Project Domain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HealthCare</fullName>
            </value>
            <value>
                <fullName>Banking &amp; Finance</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Transport &amp; Logistics</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>