force-app/main/default/objects/Opportunity/fields/QA_Resources_Per_Project_Phase__c.field-meta.xml
<CustomField>
    <fullName>QA_Resources_Per_Project_Phase__c</fullName>
    <label>QA Resources Per Project Phase</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>