force-app/main/default/objects/Opportunity/fields/Reason_for_not_accepting_the_quote__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_not_accepting_the_quote__c</fullName>
    <label>Reason for not accepting the quote</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proposal amount too high</fullName>
            </value>
            <value>
                <fullName>Got a better deal</fullName>
            </value>
            <value>
                <fullName>Duration not feasible</fullName>
            </value>
            <value>
                <fullName>Resource scarcity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>