force-app/main/default/objects/Opportunity/fields/Req_Estimated_hours__c.field-meta.xml
<CustomField>
    <fullName>Req_Estimated_hours__c</fullName>
    <label>Req Estimated hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>