force-app/main/default/objects/Opportunity/fields/Req_Resources_Per_Project_Phase__c.field-meta.xml
<CustomField>
    <fullName>Req_Resources_Per_Project_Phase__c</fullName>
    <label>Req Resources Per Project Phase</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>