force-app/main/default/objects/Opportunity/recordTypes/NPSP_Default.recordType-meta.xml
<RecordType>
    <fullName>NPSP_Default</fullName>
    <active>false</active>
    <businessProcess>NPSP_Default</businessProcess>
    <label>NPSP Default</label>
</RecordType>