force-app/main/default/objects/Opportunity/validationRules/Path_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Path_Validation_Rule</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(PRIORVALUE(checkpath__c) &lt; checkpath__c)</errorConditionFormula>
    <errorMessage>You cant go back to change path</errorMessage>
</ValidationRule>